# SPH_Voxel_Erosion

./: .gitignore  .gitmodules  CMakeLists(no openMP).txt  CMakeLists.txt  CMakeSettings.json  LICENSE  main.cpp  readme.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml
include/: data_structures.h  debugbreak.h  gmp.h  offscreen.h  physics.h  render.h
include/CGAL/: version.h
include/boost/phoenix/stl/: tuple.hpp
lib/: boost_atomic-vc140-mt.lib  boost_chrono-vc140-mt.lib  boost_container-vc140-mt.lib  boost_date_time-vc140-mt.lib  boost_exception-vc140-mt.lib  boost_filesystem-vc140-mt.lib  boost_graph-vc140-mt.lib  boost_iostreams-vc140-mt.lib  boost_math_c99-vc140-mt.lib  boost_math_c99f-vc140-mt.lib  boost_math_c99l-vc140-mt.lib  boost_math_tr1-vc140-mt.lib  boost_math_tr1f-vc140-mt.lib  boost_math_tr1l-vc140-mt.lib  boost_random-vc140-mt.lib  boost_regex-vc140-mt.lib  boost_serialization-vc140-mt.lib  boost_system-vc140-mt.lib  boost_thread-vc140-mt.lib  boost_wserialization-vc140-mt.lib  bz2.lib  gmp.lib  gmpxx.lib  lzma.lib  mpfr.lib  yasm.lib  zstd.lib
lib/pkgconfig/: gmp.pc  gmpxx.pc  libzstd.pc  mpfr.pc
shader/: shader.fs  shader.vs  shader_instance.fs  shader_instance.vs
source/: camera.h  physics.h
src/: main.cpp  physics.cpp  render.cpp
